--- a/v2/package.json
+++ b/v2/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "ksqldb-orm",
+  "name": "gftd-orm",
   "version": "0.1.0",
-  "description": "Type-safe Drizzle ORM-like DSL for ksqlDB with Row-Level Security",
+  "description": "Enterprise-grade real-time data platform with ksqlDB, inspired by Supabase architecture",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "test": "jest",
+    "test": "pnpm exec jest",
     "lint": "eslint src/**/*.ts",
-    "format": "prettier --write src/**/*.ts"
+    "format": "prettier --write src/**/*.ts",
+    "demo": "pnpm exec ts-node examples/mock-demo.ts",
+    "demo:real": "pnpm exec ts-node examples/demo.ts"
   },
   "keywords": [
     "ksqldb",
@@ -37,6 +39,7 @@
     "jest": "^29.0.0",
     "prettier": "^3.0.0",
     "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.0"
   },
   "packageManager": "pnpm@8.15.0"
