--- a/package.json
+++ b/package.json
@@ -1,9 +1,22 @@
 {
-  "name": "gftd-orm",
+  "name": "@junkawasaki/gftd-orm",
   "version": "0.1.0",
   "description": "Enterprise-grade real-time data platform with ksqlDB, inspired by Supabase architecture",
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "package.json"
+  ],
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
@@ -12,7 +25,9 @@
     "format": "prettier --write src/**/*.ts",
     "demo": "pnpm exec ts-node examples/mock-demo.ts",
     "demo:real": "pnpm exec ts-node examples/demo.ts",
-    "demo:gftd": "pnpm exec ts-node examples/gftd-orm-demo.ts"
+    "demo:gftd": "pnpm exec ts-node examples/gftd-orm-demo.ts",
+    "prepublishOnly": "pnpm run build && pnpm run test",
+    "prepack": "pnpm run build"
   },
   "keywords": [
     "ksqldb",
@@ -28,14 +43,40 @@
     "supabase",
     "gftd"
   ],
-  "author": "",
+  "author": {
+    "name": "GFTD Team",
+    "url": "https://github.com/junkawasaki"
+  },
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/junkawasaki/gftd-orm.git"
+  },
+  "homepage": "https://github.com/junkawasaki/gftd-orm#readme",
+  "bugs": {
+    "url": "https://github.com/junkawasaki/gftd-orm/issues"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com/"
+  },
   "dependencies": {
     "avsc": "^5.7.7",
     "axios": "^1.6.0",
     "uuid": "^9.0.1",
     "ws": "^8.18.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^2.4.3",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "cors": "^2.8.5",
+    "winston": "^3.11.0",
+    "express-validator": "^7.0.1",
+    "express-slow-down": "^2.0.1",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
@@ -43,6 +84,9 @@
     "@types/uuid": "^9.0.7",
     "@types/ws": "^8.5.0",
     "@types/jsonwebtoken": "^9.0.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
