プロジェクトのパッケージ名を「@junkawasaki/gftd-orm」から「@gftdcojp/gftd-orm」に変更し、関連する設定ファイルやドキュメントを更新しました。また、新たにLICENSEファイルを追加し、GitHub Package Registryに関する設定を整備しました。これにより、プロジェクトの整合性が向上し、ユーザーがパッケージをより簡単に利用できるようになりました。各ファイルには適切なコメントを追加し、可読性と保守性を向上させました。

--- a/.github/workflows/manual-publish.yml
+++ b/.github/workflows/manual-publish.yml
@@ -24,7 +24,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: 'https://npm.pkg.github.com/'
+          scope: '@gftdcojp'
 
       - name: Install pnpm
         uses: pnpm/action-setup@v2
@@ -60,10 +61,10 @@ jobs:
           git tag "v$(node -p "require('./package.json').version")"
           git push origin main --tags
 
-      - name: Publish to NPM
+      - name: Publish to GitHub Package Registry
         run: pnpm publish --no-git-checks
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create GitHub Release
         uses: actions/create-release@v1
@@ -78,7 +79,7 @@ jobs:
             
             ## Installation
             ```bash
-            npm install gftd-orm@${{ steps.version.outputs.version }}
+            npm install @gftdcojp/gftd-orm@${{ steps.version.outputs.version }}
             ```
           draft: false
           prerelease: false 
