README.mdにセキュリティ機能に関する新しいセクションを追加し、包括的なセキュリティ対策を明記しました。また、SECURITY.mdを新規作成し、セキュリティガイドを詳細に記述しました。さらに、package.jsonに新しいデモスクリプトを追加し、materialized-view-demo.tsを新規作成しました。これにより、プロジェクトのセキュリティとデモ機能が強化され、ユーザーがより簡単に利用できるようになりました。

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "demo": "pnpm exec ts-node examples/mock-demo.ts",
     "demo:real": "pnpm exec ts-node examples/demo.ts",
     "demo:gftd": "pnpm exec ts-node examples/gftd-orm-demo.ts",
+    "demo:mv": "pnpm exec ts-node examples/materialized-view-demo.ts",
     "prepublishOnly": "pnpm run build && pnpm run test",
     "prepack": "pnpm run build"
   },
