Jestの設定ファイル（jest.config.js）を削除し、Vitestに移行しました。package.jsonにVitest関連のスクリプトを追加し、devDependenciesにVitestを追加しました。また、新たにvitest.config.tsを作成し、テスト環境を整備しました。CI/CDパイプラインにおいても、テストとセキュリティスキャンのワークフローを追加し、プロジェクトの品質向上を図りました。

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "test": "pnpm exec jest",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
     "demo": "pnpm exec ts-node examples/mock-demo.ts",
@@ -80,7 +83,6 @@
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "@types/uuid": "^9.0.7",
     "@types/ws": "^8.5.0",
@@ -90,12 +92,13 @@
     "@types/express": "^4.17.21",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitest/coverage-v8": "^1.0.0",
+    "@vitest/ui": "^1.0.0",
     "eslint": "^8.0.0",
-    "jest": "^29.0.0",
     "prettier": "^3.0.0",
-    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^1.0.0"
   },
   "packageManager": "pnpm@8.15.0"
 }
