DEVELOPMENT.mdを新規作成し、開発環境のセットアップ、テスト手順、CI/CDパイプライン、パフォーマンス監視、セキュリティ対策、トラブルシューティング、コントリビューションガイドを詳細に記述しました。また、package.jsonにベンチマークテスト用のスクリプトを追加し、README.mdに開発・CI/CDに関する新しいセクションを追加しました。これにより、プロジェクトの開発フローが明確になり、ユーザーがより簡単に利用できるようになりました。

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
+    "test:benchmark": "vitest run --reporter=verbose src/__tests__/benchmark.test.ts",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
     "demo": "pnpm exec ts-node examples/mock-demo.ts",
