package.jsonにブラウザおよびサーバー用のクライアントエントリを追加し、README.mdに環境別インポートのセクションを更新しました。新たにsrcディレクトリにブラウザ専用クライアントとサーバー専用クライアントを実装し、リアルタイム通信やデータベース操作の機能を強化しました。また、hooks内のuseGftdOrmをブラウザ専用に変更し、クライアントの初期化やリアルタイムサブスクリプションの機能を追加しました。これにより、Next.js環境でのGFTD-ORMの利用がさらに直感的かつ安全になりました。

--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
     },
-    "./client": {
-      "import": "./dist/client.js",
-      "require": "./dist/client.js",
-      "types": "./dist/client.d.ts"
+    "./browser": {
+      "import": "./dist/browser-client.js",
+      "require": "./dist/browser-client.js",
+      "types": "./dist/browser-client.d.ts"
     },
     "./server": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": "./dist/server-client.js",
+      "require": "./dist/server-client.js",
+      "types": "./dist/server-client.d.ts"
+    },
+    "./hooks": {
+      "import": "./dist/hooks/useGftdOrm.js",
+      "require": "./dist/hooks/useGftdOrm.js",
+      "types": "./dist/hooks/useGftdOrm.d.ts"
     }
   },
   "files": [
