--- a/env.example
+++ b/env.example
@@ -1,26 +1,36 @@
 # GFTD ORM Configuration
 # Copy this file to .env and fill in your actual values
 
-# ksqlDB Configuration
-GFTD_KSQLDB_ENDPOINT=https://your-ksqldb-endpoint
-GFTD_KSQLDB_KEY=your-api-key
-GFTD_KSQLDB_SECRET=your-api-secret
+# Core Configuration
+GFTD_URL=http://localhost:8088
+GFTD_SERVICE_ROLE_KEY=your-service-role-key
+GFTD_ANON_KEY=your-anon-key
+
+# Database Configuration (ksqlDB)
+GFTD_DB_URL=http://localhost:8088
+GFTD_DB_API_KEY=your-api-key
+GFTD_DB_API_SECRET=your-api-secret
 
 # Schema Registry Configuration
-GFTD_SCHEMA_REGISTRY_URL=https://your-schema-registry-url
-GFTD_SCHEMA_REGISTRY_USER=your-username
-GFTD_SCHEMA_REGISTRY_PASS=your-password
+GFTD_SCHEMA_REGISTRY_URL=http://localhost:8081
+GFTD_SCHEMA_REGISTRY_AUTH_USER=your-username
+GFTD_SCHEMA_REGISTRY_AUTH_PASSWORD=your-password
+GFTD_SCHEMA_REGISTRY_API_KEY=your-schema-registry-api-key
 
 # JWT Configuration
 GFTD_JWT_SECRET=your-super-secret-jwt-key-minimum-32-characters
 GFTD_JWT_EXPIRES_IN=1h
 GFTD_JWT_ALGORITHM=HS256
 
-# Storage Configuration
-GFTD_STORAGE_ENDPOINT=https://your-s3-endpoint
+# Storage Configuration (S3 Compatible)
+GFTD_STORAGE_ENDPOINT=http://localhost:9000
 GFTD_STORAGE_ACCESS_KEY=your-access-key
 GFTD_STORAGE_SECRET_KEY=your-secret-key
 GFTD_STORAGE_BUCKET=your-bucket-name
+
+# Realtime Configuration
+GFTD_REALTIME_URL=ws://localhost:8088
+GFTD_REALTIME_API_KEY=your-realtime-api-key
 
 # OAuth Configuration
 GFTD_GOOGLE_CLIENT_ID=your-google-client-id
@@ -41,4 +51,15 @@ GFTD_AUDIT_LOG_FILE=./logs/audit.log
 
 # CORS Configuration
 GFTD_CORS_ORIGINS=http://localhost:3000,https://your-app.com
-GFTD_CORS_CREDENTIALS=true 
+GFTD_CORS_CREDENTIALS=true
+
+# Client-side Configuration (for Next.js projects)
+# These should be prefixed with NEXT_PUBLIC_ in your .env.local
+# NEXT_PUBLIC_GFTD_URL=http://localhost:8088
+# NEXT_PUBLIC_GFTD_ANON_KEY=your-anon-key
+# NEXT_PUBLIC_GFTD_DB_URL=http://localhost:8088
+# NEXT_PUBLIC_GFTD_DB_API_KEY=your-public-api-key
+# NEXT_PUBLIC_GFTD_SCHEMA_REGISTRY_URL=http://localhost:8081
+# NEXT_PUBLIC_GFTD_SCHEMA_REGISTRY_API_KEY=your-public-schema-key
+# NEXT_PUBLIC_GFTD_REALTIME_URL=ws://localhost:8088
+# NEXT_PUBLIC_GFTD_REALTIME_API_KEY=your-public-realtime-key 
