環境設定ファイル(env.example)とREADME.mdを更新し、GFTDの構成を整理しました。新たにデータベース、スキーマレジストリ、ストレージ、リアルタイム通信の設定を追加し、環境変数のプレフィックスを統一しました。また、README.md内のクライアント設定に関するセクションを修正し、環境変数の使用方法を明確にしました。これにより、プロジェクトの設定がより直感的かつ安全に行えるようになりました。

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,1 @@
-@gftdcojp:registry=https://npm.pkg.github.com/ 
+@gftdcojp:registry=https://npm.pkg.github.com/ @gftdcojp:registry=https://npm.pkg.github.com
