--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "name": "GFTD Team",
     "url": "https://github.com/gftdcojp"
   },
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE",
   "repository": {
     "type": "git",
     "url": "https://github.com/gftdcojp/gftd-orm.git"
