npm設定を更新し、@gftdcojpのスコープパッケージレジストリをGitHubからnpmjs.orgに変更しました。また、package.json内のエントリポイントをdist/srcに修正し、ファイル構成を整理しました。これにより、プロジェクトの依存関係が明確になり、ビルドプロセスが改善されました。

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,5 @@
-@gftdcojp:registry=https://npm.pkg.github.com/ @gftdcojp:registry=https://npm.pkg.github.com
+# Scoped package registry for @gftdcojp
+@gftdcojp:registry=https://registry.npmjs.org/
+
+# Global npm configuration
+registry=https://registry.npmjs.org/
