--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gftdcojp/gftd-orm",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Enterprise-grade real-time data platform with ksqlDB, inspired by Supabase architecture",
   "main": "dist/src/index.js",
   "module": "dist/src/index.js",
@@ -89,29 +89,30 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
+    "@gftdcojp/gftd-orm": "^0.1.0",
     "avsc": "^5.7.7",
     "axios": "^1.6.0",
-    "uuid": "^9.0.1",
-    "ws": "^8.18.0",
-    "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
-    "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
     "cors": "^2.8.5",
-    "winston": "^3.11.0",
-    "express-validator": "^7.0.1",
+    "dotenv": "^16.3.1",
+    "express-rate-limit": "^7.1.5",
     "express-slow-down": "^2.0.1",
-    "dotenv": "^16.3.1"
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/uuid": "^9.0.7",
-    "@types/ws": "^8.5.0",
-    "@types/jsonwebtoken": "^9.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
+    "@types/uuid": "^9.0.7",
+    "@types/ws": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitest/coverage-v8": "^1.0.0",
