CalVer（Calendar Versioning）を導入し、バージョン管理の形式を`YY.MM.MICRO`に変更しました。`package.json`のバージョンを`0.1.1`から`25.07.0`に更新し、バージョン更新用のスクリプトを追加しました。また、`.gitignore`にCalVerロックファイルを追加し、`CALVER.md`を新規作成して使用方法を明記しました。これにより、バージョン管理がより明確かつ自動化され、プロジェクトの運用が効率化されました。

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gftdcojp/gftd-orm",
-  "version": "0.1.1",
+  "version": "25.07.0",
   "description": "Enterprise-grade real-time data platform with ksqlDB, inspired by Supabase architecture",
   "main": "dist/src/index.js",
   "module": "dist/src/index.js",
@@ -47,7 +47,14 @@
     "demo:gftd": "pnpm exec ts-node examples/gftd-orm-demo.ts",
     "demo:mv": "pnpm exec ts-node examples/materialized-view-demo.ts",
     "prepublishOnly": "pnpm run build && pnpm run test",
-    "prepack": "pnpm run build"
+    "prepack": "pnpm run build",
+    "version": "node scripts/update-version.js show",
+    "version:patch": "node scripts/update-version.js patch",
+    "version:minor": "node scripts/update-version.js minor",
+    "version:major": "node scripts/update-version.js major",
+    "version:next": "node scripts/update-version.js next",
+    "calver": "node scripts/update-version.js",
+    "calver:init": "node scripts/update-version.js patch"
   },
   "keywords": [
     "ksqldb",
