React Hooksの実装を追加し、README.mdを更新しました。package.jsonのフックエントリポイントを修正し、useGftdOrmからindex.jsに変更しました。また、useBrowserClientとuseRealtimeSubscriptionの機能を強化し、関連する型定義を追加しました。

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
       "types": "./dist/src/server-client.d.ts"
     },
     "./hooks": {
-      "import": "./dist/src/hooks/useGftdOrm.js",
-      "require": "./dist/src/hooks/useGftdOrm.js",
-      "types": "./dist/src/hooks/useGftdOrm.d.ts"
+      "import": "./dist/src/hooks/index.js",
+      "require": "./dist/src/hooks/index.js",
+      "types": "./dist/src/hooks/index.d.ts"
     }
   },
   "files": [
