--- a/env.example
+++ b/env.example
@@ -38,6 +38,16 @@ GFTD_GOOGLE_CLIENT_SECRET=your-google-client-secret
 GFTD_GITHUB_CLIENT_ID=your-github-client-id
 GFTD_GITHUB_CLIENT_SECRET=your-github-client-secret
 
+# Auth0 Integration (Default values are set in the SDK)
+# Override these only if you need different settings
+AUTH0_DOMAIN=gftd.jp.auth0.com
+AUTH0_AUDIENCE=https://gftd.jp.auth0.com/api/v2/
+AUTH0_CLIENT_ID=k0ziPQ6IkDxE1AUSvzx5PwXtnf4y81x0
+AUTH0_JWKS_URI=https://gftd.jp.auth0.com/.well-known/jwks.json
+
+# Anonymous Key System
+GFTD_KEY_PREFIX=gftd
+
 # Security Configuration
 GFTD_RATE_LIMIT_WINDOW_MS=900000
 GFTD_RATE_LIMIT_MAX_REQUESTS=100
